k8s/infra/dmarc-report-viewer/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmarc-report-viewer
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 29219
        runAsGroup: 29219
        fsGroup: 29219
      containers:
        - name: dmarc-report-viewer
          image: ghcr.io/cry-inc/dmarc-report-viewer
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
