k8s/infra/dmarc-report-viewer/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dmarc-report-viewer
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
